# prusti-dev

./: .gitignore  .gitmodules  Cargo.toml  basic_test.rs
.github/workflows/: test.yml
analysis/: Cargo.toml
analysis/src/: mir_utils.rs
analysis/src/domains/definitely_accessible/: analysis.rs  state.rs
analysis/src/domains/definitely_initialized/: analysis.rs  state.rs
analysis/src/domains/framing/: analysis.rs  state.rs
analysis/src/domains/maybe_borrowed/: analysis.rs  state.rs
analysis/src/domains/reaching_definitions/: state.rs
prusti-common/: Cargo.toml
prusti-common/src/: lib.rs
prusti-contracts/prusti-specs/src/: lib.rs  parse_closure_macro.rs
prusti-contracts/prusti-specs/src/specifications/: preparser.rs
prusti-contracts/src/: lib.rs
prusti-encoder/src/encoder_traits/: impure_function_enc.rs
prusti-encoder/src/encoders/: mir_impure.rs  mir_pure.rs
prusti-encoder/src/encoders/type/: domain.rs  predicate.rs  rust_ty_predicates.rs
prusti-interface/src/: lib.rs  utils.rs
prusti-interface/src/environment/: body.rs  diagnostic.rs  loops.rs  mir_storage.rs  mod.rs  polonius_info.rs  procedure.rs  query.rs
prusti-interface/src/environment/borrowck/: regions.rs
prusti-interface/src/environment/mir_utils/: all_places.rs  real_edges.rs  split_aggregate_assignment.rs
prusti-interface/src/specs/: cross_crate.rs  decoder.rs  encoder.rs  external.rs  mod.rs
prusti-interface/src/specs/checker/: common.rs  predicate_checks.rs
prusti-utils/src/: lib.rs
prusti/src/: callbacks.rs
vir/src/: lib.rs
vir/src/legacy/ast/: expr.rs  stmt.rs  (+1 more)
(+5 files in other folders)
