[workspace]
members = [
    "prusti-contracts",
    "prusti-contracts-impl",
    "prusti-contracts-internal",
    "prusti-specs",
    "prusti-common",
]

exclude = [
    "prusti-contracts-test",
]

[profile.release]
# Enable after Rust's issue 50324
# https://github.com/rust-lang/rust/issues/50324
# lto = true
